# capstone-project

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/agents/: extractor.py  judge.py  validator.py
app/api/: routes_eval.py  routes_invoice.py
app/evaluation/: deterministic.py  judge.py  runner.py
app/llm/: client.py  prompts.py
app/schemas/: evaluation.py  invoice.py
app/workflow/: graph.py  state.py
data/: test_cases.example.json
scripts/: make_real_invoice.py  make_sample_pdf.py  smoke_test.py  smoke_test_real.py  test_pdf.py
tests/: test_deterministic.py  test_health.py
usecase/: App_InvoiceProcessing_Usecase.docx
